; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_arizona-micsupp.c_arizona_micsupp_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_arizona-micsupp.c_arizona_micsupp_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.arizona_micsupp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @arizona_micsupp_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arizona_micsupp_disable(%struct.regulator_dev* %0) #0 {
  %2 = alloca %struct.regulator_dev*, align 8
  %3 = alloca %struct.arizona_micsupp*, align 8
  %4 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %2, align 8
  %5 = load %struct.regulator_dev*, %struct.regulator_dev** %2, align 8
  %6 = call %struct.arizona_micsupp* @rdev_get_drvdata(%struct.regulator_dev* %5)
  store %struct.arizona_micsupp* %6, %struct.arizona_micsupp** %3, align 8
  %7 = load %struct.regulator_dev*, %struct.regulator_dev** %2, align 8
  %8 = call i32 @regulator_disable_regmap(%struct.regulator_dev* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.arizona_micsupp*, %struct.arizona_micsupp** %3, align 8
  %13 = getelementptr inbounds %struct.arizona_micsupp, %struct.arizona_micsupp* %12, i32 0, i32 0
  %14 = call i32 @schedule_work(i32* %13)
  br label %15

15:                                               ; preds = %11, %1
  %16 = load i32, i32* %4, align 4
  ret i32 %16
}

declare dso_local %struct.arizona_micsupp* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @regulator_disable_regmap(%struct.regulator_dev*) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
